--- a/medical_fe/src/styles/MedicalDash.css
+++ b/medical_fe/src/styles/MedicalDash.css
@@ -131,3 +131,31 @@ body {
     padding-bottom: 10px;
     margin-bottom: 15px;
 }
+
+/* css button đăng xuất */
+.logout-list {
+    list-style: none;
+    /* bỏ bullet */
+    padding: 0;
+    margin: 0;
+}
+
+.logout-btn {
+    display: inline-block;
+    padding: 8px 16px;
+    background-color: #c0c0c0;
+    /* màu bạc */
+    color: #000;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-weight: bold;
+    transition: background-color 0.3s, transform 0.2s;
+}
+
+.logout-btn:hover {
+    background-color: #a9a9a9;
+    /* đổi màu khi hover */
+    transform: translateY(-2px);
+    /* nâng nhẹ khi hover */
+}
