add code user, đăng kí, đăng nhập, quên mật khẩu, đătk lịch khám

--- a/medical_fe/src/styles/Login.css
+++ b/medical_fe/src/styles/Login.css
@@ -1,11 +1,8 @@
 /* Background full page */
 .login-page {
+    padding: 40px 0;
     display: flex;
-    align-items: center;
     justify-content: center;
-    height: 100vh;
-    background: linear-gradient(to right, #00c6ff, #0072ff);
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 /* Card */
@@ -67,15 +64,22 @@
 .btn-login {
     width: 100%;
     padding: 12px 0;
-    border: none;
-    border-radius: 6px;
-    background-color: #0072ff;
+    background-color: #005fcc;
+    /* xanh đẹp hơn */
     color: #fff;
     font-size: 16px;
     font-weight: 600;
+    border: none;
+    border-radius: 6px;
     cursor: pointer;
     transition: background 0.2s;
+
+    /* ⭐ căn giữa tuyệt đối */
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
 
 .btn-login:hover {
     background-color: #0056b3;
@@ -151,4 +155,24 @@
 
 .go-register a:hover {
     text-decoration: underline;
+}
+
+/* errr */
+.input-error {
+    border: 1px solid #ff4d4f !important;
+    box-shadow: 0 0 0 2px rgba(255, 77, 79, 0.3);
+}
+
+.error-box {
+    margin-top: 4px;
+    background: #ffe6e6;
+    border-left: 4px solid #ff4d4f;
+    padding: 6px 10px;
+    border-radius: 4px;
+}
+
+.error-text {
+    color: #d93025;
+    font-size: 13px;
+    margin: 0;
 }
