--- a/medical_fe/src/styles/Home.css
+++ b/medical_fe/src/styles/Home.css
@@ -55,3 +55,63 @@
 .nav-arrow.right {
   right: 28px;
 }
+
+
+/* SLIDER FULL WIDTH */
+.home-slider {
+  width: 100%;
+  max-width: 1400px;
+  margin: 0 auto;
+}
+
+.slide-img {
+  width: 100%;
+  height: 430px;
+  object-fit: cover;
+  border-radius: 8px;
+}
+
+/* CUSTOM ARROWS */
+.swiper-button-next,
+.swiper-button-prev {
+  color: white !important;
+  background-color: rgba(0, 0, 0, 0.3);
+  padding: 25px;
+  border-radius: 50%;
+  transition: 0.3s ease;
+}
+
+.swiper-button-next:hover,
+.swiper-button-prev:hover {
+  background-color: rgba(0, 0, 0, 0.55);
+}
+
+
+/* SLIDER FULL WIDTH */
+.home-slider {
+  width: 100%;
+  max-width: 1400px;
+  margin: 0 auto;
+}
+
+.slide-img {
+  width: 100%;
+  height: 430px;
+  object-fit: cover;
+  border-radius: 8px;
+}
+
+/* CUSTOM ARROWS */
+.swiper-button-next,
+.swiper-button-prev {
+  color: white !important;
+  background-color: rgba(0, 0, 0, 0.3);
+  padding: 25px;
+  border-radius: 50%;
+  transition: 0.3s ease;
+}
+
+.swiper-button-next:hover,
+.swiper-button-prev:hover {
+  background-color: rgba(0, 0, 0, 0.55);
+}
