--- a/medical_fe/src/styles/header.css
+++ b/medical_fe/src/styles/header.css
@@ -113,3 +113,30 @@
 .dropdown-menu button:hover {
     background: #f0f4ff;
 }
+
+/* button đăng nhập, đăng kí */
+.notify-btn {
+    background-color: #f4a100;
+    color: white;
+    padding: 8px 20px;
+    margin-left: 8px;
+    font-size: 14px;
+    font-weight: 600;
+
+    border: none;
+    border-radius: 8px;
+
+    cursor: pointer;
+    transition: all 0.3s ease;
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.15);
+}
+
+.notify-btn:hover {
+    background-color: #ffb300;
+    transform: translateY(-2px);
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.20);
+}
+
+.notify-btn:active {
+    transform: scale(0.97);
+}
