--- a/medical_fe/src/styles/style.css
+++ b/medical_fe/src/styles/style.css
@@ -143,7 +143,7 @@ html,
 }
 
 .notify-btn {
-    background: #f59e0b;
+    background: #2b77c9;
 }
 
 /* ==================== HERO ==================== */
